# breakingbad_graphqlapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
breakingbad/: bbad.py  breakingbad.py  data.py  database.py  database.sqlite  database.sqlite3  filters.py  models.py  schema.py  schemas.py
